fix version mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -192,6 +192,44 @@ body {
   }
 }
 
+.card__producto {
+  position: relative;
+}
+
+.card__producto img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.overlay {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  bottom: 35%;
+  height: 55%;
+  background: rgb(0, 0, 0);
+  background: rgba(0, 0, 0, 0.5);
+  color: #f1f1f1;
+  width: 80%;
+  border-radius: 20px;
+  transition: .5s ease;
+  opacity:0;
+  color: white;
+  font-size: 20px;
+  padding: 20px;
+  text-align: center;
+}
+
+.card__producto:hover .overlay {
+  opacity: 1;
+}
+
+.card__producto img {
+  height: 25rem;
+  margin-bottom: 2rem;
+}
+
 .card__producto-nombre {
   align-items: center;
   display: flex;
@@ -420,7 +458,6 @@ footer {
   .card__producto-nombre {
     font-size: x-large;
   }
-
 
   .card__producto {
     position: relative;
